...
        }
    }
}

struct StartingTitleView: View {
    var body: some View {
        Text("Critter Counting")
            .multilineTextAlignment(.center)
            .font(.system(size: 70, weight: .bold, design: .rounded))
            .foregroundStyle(Color.darkNavy)
            .shadow(color: .gray, radius: 2, x: 0, y: 2)
    }
}
...
    var body: some View {
        Button {
            path.append(true)
        } label: {
            HStack {
                Spacer()
                Text("Start")
                    .font(.title)
                    .bold()
                Spacer()
            }
            .padding()
            .background(Color.darkNavy)
...
