...
        Text("\(vm.tapCount)")
            .font(.system(size: 70))
            .scaleEffect(countScaleEffect)
            .foregroundStyle(.white)
            .offset(x: countXOffset, y: countYOffset)
            .shadow(radius: 5)
            .accessibilityIdentifier("tapCounter")
    }
}

struct NextPageButton: View {
    @Environment(CountingViewModel.self) var vm
    @Binding var countXOffset: Double
...
            } else {
                vm.nextPage()
            }
        } label: {
            HStack {
                Spacer()
                Text(vm.pageCount == 9 ? "Exit" : "Next")
                    .font(.system(size: 55))
                    .foregroundStyle(.white)
                    .bold()
                    .shadow(radius: 5)
                    .padding(.trailing, 40)
            }
...
